<resources>
    <string name="app_name">decotuk_app_capstone</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">Riwayat</string>
    <string name="title_record">Rekam</string>
    <string name="profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profil</string>
    <string name="discover">Jelajahi</string>
    <string name="home_text_cardview1">Detaksi Covid-19 Dengan Decotuk</string>
    <string name="home_tv_subtitle">Layanan Aplikasi Decotuk</string>
    <string name="home_tv_cardview1">Deteksi Covid-19 dengan Rekaman Batuk</string>
    <string name="home_tv_cardview2">Pantau Riwayat Deteksi Covid-19 Anda</string>
    <string name="home_tv_cardview3">Pantau Angka Kasus Covid-19 Terkini</string>
    <string name="tv_title_history">Riwayat</string>
    <string name="test_date">08 April 2021</string>
    <string name="test_result">Negatif</string>
    <string name="tv_title_record">Rekam Suara Batuk</string>
    <string name="tv_title_profile">Profil</string>
    <string name="username">Username</string>
    <string name="email">username@email.example</string>
    <string name="record_time">00:00:00</string>
    <string name="login_title">Masuk</string>
    <string name="login_capt">Silahkan Masukkan Email dan Kata Sandi Anda</string>
    <string name="signup_title_capt">Silahkan Masukkan Informasi Anda</string>
    <string name="signup_title">Sign Up</string>
    <string name="email_title">Email</string>
    <string name="pass_title">Kata Sandi</string>
    <string name="pass_forger">Lupa Kata Sandi?</string>
    <string name="auth_capt">Atau Masuk Dengan</string>
    <string name="signup_capt">Belum Punya Akun? <b>Daftar Akun</b></string>
    <string name="signup_capt_secc">Sudah Punya Akun? <b>Masuk</b></string>
    <string name="onboarding_next_btn">Selanjutnya</string>
    <string name="covid_19">Kasus Covid-19 di Indonesia</string>
    <string name="recovery">Sembuh</string>
    <string name="data_value">4,532</string>
    <string name="confirmed">Positif</string>
    <string name="death">Meninggal</string>
    <string name="today_case">Kasus hari ini, %s</string>
    <string name="total_case">Total Kasus</string>
    <string name="total_recovery">Total Sembuh</string>
    <string name="province">Provinsi</string>
    <string name="hospitalization">Dirawat</string>
    <string name="negativ">Negatif Covid-19</string>
    <string name="positif_capt">Dari hasil perekaman suara batuk yang sudah anda lakukan, anda berpotensi terindikasi Covid-19</string>
    <string name="negatif_capt">Dari hasil perekaman suara batuk yang sudah anda lakukan, anda berpotensi negatif Covid-19</string>
    <string name="negatif_capt2">Sistem kami menggunakan pendekatan machine learning untuk memproses suara rekaman batuk mu dan menentukan hasilnya berdasarkan sample data yang kami punya, hasil ini bersifat prediktif yaa dan tidak dapat digunakan sebagai penentu mutlak kondisi covid-19 kamu</string>
    <string name="record_instruction">Tekan tombol rekam, dan coba lah untuk melakukan batuk paksa ,sistem kami akan memproses suara batuk mu dan menentukan apakah kamu berpotensi terindikasi positif covid-19 atau tidak</string>
</resources>